--- a/code_name.html
+++ b/code_name.html
@@ -12,7 +12,6 @@
   <header class="site-header">
   <a href="#" class="logo">CV_STUDIO</a>
 
-  <!-- hamburger -->
   <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
     <span class="bar"></span><span class="bar"></span><span class="bar"></span>
   </button>
@@ -28,10 +27,11 @@
 <section class="section top">
   <img src="gametitle.png" alt="Game Title" class="title-img">
   <div class="text-box">Code Name Oldfield: Operation Phantom is a 2D retro style game with elements of action espionage and political drama. It puts the player in the shoes of a skilled soldier named  OLDFIELD. Through stealth and strategy, the player must infiltrate deep into enemy territory and gather intelligence on the plans for a new AI weapon.</div>
-  <a href="#" class="download-btn btn1">DOWNLOAD DEMO</a>
-  <a href="#" class="download-btn btn2">GAME DESIGN DOCUMENT</a>
+  <a href="https://drive.google.com/uc?export=download&id=16k19GfTVy_UIFpULfYcGBixcFbMLQ5gh" class="download-btn btn1">DOWNLOAD DEMO</a>
+  <a href="https://drive.google.com/uc?export=download&id=13WelA7PmONDkvozqJK2Jt_rHnvqr1ytb" class="download-btn btn2">GAME DESIGN DOCUMENT</a>
   <img src="oldfield.png" alt="Oldfield" class="character-img">
 </section>
+
 
 <section class="parallax">
   <div class="video-background">
@@ -68,7 +68,7 @@
    </div>
   <div class="readmore">
    <h3>READ FULL PROJECT -></h3>
-   <a href="#">GAME DESIGN DOCUMENT</a>
+   <a href="https://drive.google.com/uc?export=download&id=13WelA7PmONDkvozqJK2Jt_rHnvqr1ytb">GAME DESIGN DOCUMENT</a>
   </div>
   <div class="content">
   <h4>45 pages of content</h4>
@@ -117,7 +117,7 @@
   </div>
   <div class="demo">
    <h3>EXPERIENCE IT YOURSELF-></h3>
-   <a href="#">DOWNLOAD DEMO</a>
+   <a href="https://drive.google.com/uc?export=download&id=16k19GfTVy_UIFpULfYcGBixcFbMLQ5gh">DOWNLOAD DEMO</a>
   </div>
   <div class="character-gallery">
   <div class="character-box">
