--- a/myprojects.html
+++ b/myprojects.html
@@ -35,11 +35,11 @@
                <a href="code_name.html">
                  <img src="GAME_ICON.png" alt="Video Game">
                </a>
-               <h3 class="glitch">Video Game</h3>
+               <h3 class="glitch">AI TOOLS IN GAME DEVELOPMENT THESES</h3>
             </div>
             <div class="work-item">
                <img src="project2.jpg">
-               <h3 class="glitch">2D Top Down Game Development</h3>
+               <h3 class="glitch">2D Top Down Game Design</h3>
             </div>
             <div class="work-item">
                <img src="SkatePark_Icon.png">
