--- a/myprojects.html
+++ b/myprojects.html
@@ -37,9 +37,11 @@
                </a>
                <h3 class="glitch">AI TOOLS IN GAME DEVELOPMENT THESES</h3>
             </div>
-            <div class="work-item">
-               <img src="project2.jpg">
-               <h3 class="glitch">2D Top Down Game Design</h3>
+            <div class="work-item item2">
+            <a href="https://youtu.be/XDPHwlj38qI">
+               <img src="FT13th/FT13TH_Animation.png">
+            </a>
+               <h3 class="glitch">2D Short Animated film</h3>
             </div>
             <div class="work-item">
                <img src="SkatePark_Icon.png">
