--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
                <h3 class="glitch">AI TOOLS IN GAME DEVELOPMENT THESES</h3>
             </div>
             <div class="work-item item2">
-               <img src="project2.jpg">
-               <h3 class="glitch">2D Top Down Game Design</h3>
+            <a href="https://youtu.be/XDPHwlj38qI">
+               <img src="FT13th/FT13TH_Animation.png">
+            </a>
+               <h3 class="glitch">2D Short Animated film</h3>
             </div>
             <div class="work-item item3">
                <img src="SkatePark_Icon.png">
