--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                <h3 class="glitch">2D Short Animated film</h3>
             </div>
             <div class="work-item item3">
+                <a href="Skate_park3d/skate.html">
                <img src="SkatePark_Icon.png">
+               </a>
                <h3 class="glitch">3D Maket</h3>
             </div>
             </div>
