--- a/myprojects.html
+++ b/myprojects.html
@@ -44,14 +44,16 @@
                <h3 class="glitch">2D Short Animated film</h3>
             </div>
             <div class="work-item item3">
+                <a href="Custom_Tshirts/tshir.html">
+               <img src="Custom_Tshirts/customdesign.png">
+               </a>
+               <h3 class="glitch">CUSTOM CLOTHING DESIGNS</h3>
+            </div>
+            <div class="work-item item4">
                 <a href="Skate_park3d/skate.html">
                <img src="SkatePark_Icon.png">
                </a>
-               <h3 class="glitch">3D Maket</h3>
-            </div>
-            <div class="work-item">
-               <img src="WINP.png">
-               <h3 class="glitch">WEBSITE IS UNDER CONSTRUCTION</h3>
+               <h3 class="glitch">3D SKATEPARK MAQUETTE</h3>
             </div>
             <div class="work-item">
                <img src="WINP.png">
