--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                <h3 class="glitch">2D Short Animated film</h3>
             </div>
             <div class="work-item item3">
-            <a href="Skate_park3d/skate.html">
-               <img src="SkatePark_Icon.png">
-            </a>
-               <h3 class="glitch">3D Maket</h3>
+                <a href="Custom_Tshirts/tshir.html">
+               <img src="Custom_Tshirts/customdesign.png">
+               </a>
+               <h3 class="glitch">CUSTOM CLOTHING DESIGNS</h3>
             </div>
             </div>
             
