--- a/Custom_Tshirts/tshir.html
+++ b/Custom_Tshirts/tshir.html
@@ -34,7 +34,7 @@
         the creation of the graphic to the selection of the color palette, everything is 
         meant to express something. Beyond creativity, it’s equally important for the artwork 
         to be clean and high-quality, which I achieve by meticulously editing every detail in 
-        GIMP until it looks exactly the way I envision it.
+        <a href="https://www.gimp.org/" target="_blank">GIMP</a>  until it looks exactly the way I envision it.
         </p>
       </div>
   </div>
