--- a/myprojects.html
+++ b/myprojects.html
@@ -55,9 +55,11 @@
                </a>
                <h3 class="glitch">3D SKATEPARK MAQUETTE</h3>
             </div>
-            <div class="work-item">
-               <img src="WINP.png">
-               <h3 class="glitch">WEBSITE IS UNDER CONSTRUCTION</h3>
+            <div class="work-item item5">
+                <a href="topdowngame/cqb.html">
+               <img src="topdowngame/topdown_icon.png">
+               </a>
+               <h3 class="glitch">2D TOP DOWN SHOOTER [PROTOTYPE]</h3>
             </div>
             <div class="work-item">
                <img src="WINP.png">
