--- a/code_name.html
+++ b/code_name.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="el">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,72 +8,76 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="code_name.css">
 </head>
+
 <body>
 
   <header class="site-header">
-  <a href="#" class="logo">CV_STUDIO</a>
+    <a href="#" class="logo">CV_STUDIO</a>
 
-  <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
-    <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-  </button>
+    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+      <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+    </button>
 
-  <nav id="nav-menu" class="nav-menu" aria-hidden="true">
-    <a href="index.html">Home</a>
-    <a href="myprojects.html" class="active">My Projects</a>
-    <a href="aboutme.html">About Me</a>
-    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=cvstudiogr@gmail.com">Contact</a>
-  </nav>
-</header>
+    <nav id="nav-menu" class="nav-menu" aria-hidden="true">
+      <a href="index.html">Home</a>
+      <a href="myprojects.html" class="active">My Projects</a>
+      <a href="aboutme.html">About Me</a>
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=cvstudiogr@gmail.com">Contact</a>
+    </nav>
+  </header>
 
-<section class="section top">
-  <img src="gametitle.png" alt="Game Title" class="title-img">
-  <div class="text-box">Code Name Oldfield: Operation Phantom is a 2D retro style game with elements of action espionage and political drama. It puts the player in the shoes of a skilled soldier named  OLDFIELD. Through stealth and strategy, the player must infiltrate deep into enemy territory and gather intelligence on the plans for a new AI weapon.</div>
-  <a href="https://drive.google.com/uc?export=download&id=16k19GfTVy_UIFpULfYcGBixcFbMLQ5gh" class="download-btn btn1">DOWNLOAD DEMO</a>
-  <a href="https://drive.google.com/uc?export=download&id=13WelA7PmONDkvozqJK2Jt_rHnvqr1ytb" class="download-btn btn2">GAME DESIGN DOCUMENT</a>
-  <img src="oldfield.png" alt="Oldfield" class="character-img">
-</section>
+  <section class="section top">
+    <img src="gametitle.png" alt="Game Title" class="title-img">
+    <div class="text-box">Code Name Oldfield: Operation Phantom is a 2D retro style game with elements of action
+      espionage and political drama. It puts the player in the shoes of a skilled soldier named OLDFIELD. Through
+      stealth and strategy, the player must infiltrate deep into enemy territory and gather intelligence on the plans
+      for a new AI weapon.</div>
+    <a href="https://drive.google.com/uc?export=download&id=16k19GfTVy_UIFpULfYcGBixcFbMLQ5gh"
+      class="download-btn btn1">DOWNLOAD DEMO</a>
+    <a href="https://drive.google.com/uc?export=download&id=13WelA7PmONDkvozqJK2Jt_rHnvqr1ytb"
+      class="download-btn btn2">GAME DESIGN DOCUMENT</a>
+    <img src="oldfield.png" alt="Oldfield" class="character-img">
+  </section>
 
 
-<section class="parallax">
-  <div class="video-background">
-    <iframe
-      src="https://www.youtube.com/embed/TpZF_B7nYgk?autoplay=1&mute=1&controls=0&loop=1&playlist=TpZF_B7nYgk&modestbranding=1&showinfo=0"
-      frameborder="0"
-      allow="autoplay; fullscreen"
-      allowfullscreen
-    ></iframe>
-  </div>
+  <section class="parallax">
+    <div class="video-background">
+      <iframe
+        src="https://www.youtube.com/embed/TpZF_B7nYgk?autoplay=1&mute=1&controls=0&loop=1&playlist=TpZF_B7nYgk&modestbranding=1&showinfo=0"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
 
-  <div class="parallax-content">
-    <h1></h1>
-    <p></p>
-  </div>
-</section>
+    <div class="parallax-content">
+      <h1></h1>
+      <p></p>
+    </div>
+  </section>
 
-<section class="section AI">
-   <div class="text-AI">
-    <h1>AI AND GAME DEVELOPMENT</h1>
-    <h2>learning the right use of AI tools</h2>
-    <p>
-      Every indie developer who starts from scratch faces three main challenges: limited budget, 
-      limited time, and the difficulty of finding and building a small team of people who they can 
-      collaborate with effectively. That was the main reason I started this project.
-    </p>
-    <p>
-      The purpose of this Project is to understaned and delve into game development and how it can be 
-      enhanced with the use of artificial intelligence tools, through the prism of a 
-      2D pixelated video game, where aims to highlight and provide insights into how 
-      artificial intelligence tools can be utilized to accelerate and 
-      facilitate the development process for an indie developer starting from scratch. 
-    </p>
-   </div>
-  <div class="readmore">
-   <h3>READ FULL PROJECT -></h3>
-   <a href="https://drive.google.com/uc?export=download&id=13WelA7PmONDkvozqJK2Jt_rHnvqr1ytb">GAME DESIGN DOCUMENT</a>
-  </div>
-  <div class="content">
-  <h4>45 pages of content</h4>
-</div>
+  <section class="section AI">
+    <div class="text-AI">
+      <h1>AI AND GAME DEVELOPMENT</h1>
+      <h2>learning the right use of AI tools</h2>
+      <p>
+        Every indie developer who starts from scratch faces three main challenges: limited budget,
+        limited time, and the difficulty of finding and building a small team of people who they can
+        collaborate with effectively. That was the main reason I started this project.
+      </p>
+      <p>
+        The purpose of this Project is to understaned and delve into game development and how it can be
+        enhanced with the use of artificial intelligence tools, through the prism of a
+        2D pixelated video game, where aims to highlight and provide insights into how
+        artificial intelligence tools can be utilized to accelerate and
+        facilitate the development process for an indie developer starting from scratch.
+      </p>
+    </div>
+    <div class="readmore">
+      <h3>READ FULL PROJECT -></h3>
+      <a href="https://drive.google.com/uc?export=download&id=13WelA7PmONDkvozqJK2Jt_rHnvqr1ytb">GAME DESIGN
+        DOCUMENT</a>
+    </div>
+    <div class="content">
+      <h4>45 pages of content</h4>
+    </div>
     <div class="about-box about-list">
       <div class="column">
         <ul>
@@ -89,144 +94,145 @@
         </ul>
       </div>
     </div>
-</section>
+  </section>
 
-<section class="section space">
-  
-</section>
+  <section class="section space">
 
-<section class="section story">
-  <div class="text-story">
-    <h1>STORY</h1>
-    <h2>The AI Rising that started it all</h2>
-    <p>
-      The year is 2034. The planet has entered a new era, where major
-      powers play a decisive role in the global flow of the world, fake
-      news and misinformation through AI have rapidly developed, and
-      geographical borders have changed. Geographically, a new Soviet
-      Russia has emerged, which continues to seek territory, threatening
-      Europe.
-    </p>
-    <p>
-      In the DEMO, the player controls a skilled N.W.G.O soldier with the 
-      codename Oldfield. Through the radio, Mr. Zero will guide the player 
-      in order to learn the tricks and tools needed to move stealthily and be able to 
-      reach the objective by avoiding and eliminating enemies encountered along the way 
-      through strategy and quit takedowns.
-    </p>
-  </div>
-  <div class="demo">
-   <h3>EXPERIENCE IT YOURSELF-></h3>
-   <a href="https://drive.google.com/uc?export=download&id=16k19GfTVy_UIFpULfYcGBixcFbMLQ5gh">DOWNLOAD DEMO</a>
-  </div>
-  <div class="character-gallery">
-  <div class="character-box">
-    <img src="oldfield.png" alt="character 1">
-    <div class="overlay"></div>
-    <div class="content">
-      <h1>OLDFIELD</h1>
-      <p>Is a skilled soldier of the N.W.G.O. Hes involvement in the first war that erupted in 
-              Ukrain in 2022, where he operated as an informant and infiltrator within Russian facilities,
-              without living any trace, made him the right person for this mission and gave him the codename
-              Oldfield as he comes back to do the same thing once and for all.</p>
+  </section>
+
+  <section class="section story">
+    <div class="text-story">
+      <h1>STORY</h1>
+      <h2>The AI Rising that started it all</h2>
+      <p>
+        The year is 2034. The planet has entered a new era, where major
+        powers play a decisive role in the global flow of the world, fake
+        news and misinformation through AI have rapidly developed, and
+        geographical borders have changed. Geographically, a new Soviet
+        Russia has emerged, which continues to seek territory, threatening
+        Europe.
+      </p>
+      <p>
+        In the DEMO, the player controls a skilled N.W.G.O soldier with the
+        codename Oldfield. Through the radio, Mr. Zero will guide the player
+        in order to learn the tricks and tools needed to move stealthily and be able to
+        reach the objective by avoiding and eliminating enemies encountered along the way
+        through strategy and quit takedowns.
+      </p>
     </div>
-  </div>
-
-  <div class="character-box">
-    <img src="zero.png" alt="Character 2">
-    <div class="overlay"></div>
-    <div class="content">
-      <h1>MR.ZERO</h1>
-      <p>Is the President of the US. 'Zero' is a code name he employs when delving deeper into
-        matters of warfare, as he must safeguard his identity in case of any leak
-        He is significantly involved in military affairs,
-        having served as a spy in the CIA and possessing considerable knowledge in the field.</p>
+    <div class="demo">
+      <h3>EXPERIENCE IT YOURSELF-></h3>
+      <a href="https://drive.google.com/uc?export=download&id=16k19GfTVy_UIFpULfYcGBixcFbMLQ5gh">DOWNLOAD DEMO</a>
     </div>
-  </div>
+    <div class="character-gallery">
+      <div class="character-box">
+        <img src="oldfield.png" alt="character 1">
+        <div class="overlay"></div>
+        <div class="content">
+          <h1>OLDFIELD</h1>
+          <p>Is a skilled soldier of the N.W.G.O. Hes involvement in the first war that erupted in
+            Ukrain in 2022, where he operated as an informant and infiltrator within Russian facilities,
+            without living any trace, made him the right person for this mission and gave him the codename
+            Oldfield as he comes back to do the same thing once and for all.</p>
+        </div>
+      </div>
 
-  <div class="character-box">
-    <img src="N.W.G.O_Logo.png" alt="Character 3">
-    <div class="overlay"></div>
-    <div class="content">
-      <h1>N.W.G.O</h1>
-      <p>New World Goverment Organization  ia a Military Organization formed by the US. 
-        Comprised most of countries in Europe with robust military capabilities. Its
-        purpose is to enable the leadership of these nations to discern between fake news and truth
-        among themselves and in times of war to unify their force.</p>
-    </div>
-  </div>
-</div>
-</section>
+      <div class="character-box">
+        <img src="zero.png" alt="Character 2">
+        <div class="overlay"></div>
+        <div class="content">
+          <h1>MR.ZERO</h1>
+          <p>Is the President of the US. 'Zero' is a code name he employs when delving deeper into
+            matters of warfare, as he must safeguard his identity in case of any leak
+            He is significantly involved in military affairs,
+            having served as a spy in the CIA and possessing considerable knowledge in the field.</p>
+        </div>
+      </div>
 
-<section class="section space">
-  
-</section>
+      <div class="character-box">
+        <img src="N.W.G.O_Logo.png" alt="Character 3">
+        <div class="overlay"></div>
+        <div class="content">
+          <h1>N.W.G.O</h1>
+          <p>New World Goverment Organization ia a Military Organization formed by the US.
+            Comprised most of countries in Europe with robust military capabilities. Its
+            purpose is to enable the leadership of these nations to discern between fake news and truth
+            among themselves and in times of war to unify their force.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<section class="section powerd">
-  <div class="TitleP">
-    <h1>POWERED BY</h1>
-  </div>
+  <section class="section space">
 
-  <div class="icons-grid">
-  <a href="https://gamemaker.io" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/gm.png" alt="Icon 1">
-      <p>GAME MAKER</p>
-    </div>
-  </a>
-    <a href="https://www.aseprite.org" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/aseprite.png" alt="Icon 2">
-      <p>ASEPRITE</p>
-    </div>
-  </a>
-  <a href="https://www.pixellab.ai/" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/pixelab.png" alt="Icon 3">
-      <p>PIXELLAB</p>
-    </div>
-  </a>
+  </section>
 
-  <a href="https://elevenlabs.io" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/eleven.png" alt="Icon 4">
-      <p>ELEVENLABS</p>
+  <section class="section powerd">
+    <div class="TitleP">
+      <h1>POWERED BY</h1>
     </div>
-  </a>
 
-  <a href="https://openai.com" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/gpt.png" alt="Icon 5">
-      <p>OPEN-AI</p>
-    </div>
-  </a>
+    <div class="icons-grid">
+      <a href="https://gamemaker.io" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/gm.png" alt="Icon 1">
+          <p>GAME MAKER</p>
+        </div>
+      </a>
+      <a href="https://www.aseprite.org" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/aseprite.png" alt="Icon 2">
+          <p>ASEPRITE</p>
+        </div>
+      </a>
+      <a href="https://www.pixellab.ai/" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/pixelab.png" alt="Icon 3">
+          <p>PIXELLAB</p>
+        </div>
+      </a>
 
-  <a href="https://pika.art" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/pika.png" alt="Icon 6">
-      <p>PIKA</p>
-    </div>
-  </a>
+      <a href="https://elevenlabs.io" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/eleven.png" alt="Icon 4">
+          <p>ELEVENLABS</p>
+        </div>
+      </a>
 
-  <a href="https://www.gimp.org" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/gimp.png" alt="Icon 7">
-      <p>GIMP</p>
-    </div>
-  </a>
+      <a href="https://openai.com" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/gpt.png" alt="Icon 5">
+          <p>OPEN-AI</p>
+        </div>
+      </a>
 
-  <a href="https://www.blackmagicdesign.com/products/davinciresolve" target="_blank" class="icon-link">
-    <div class="icon-box">
-      <img src="logos/dav.png" alt="Icon 8">
-      <p>DAVINCI RESOLVE</p>
+      <a href="https://pika.art" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/pika.png" alt="Icon 6">
+          <p>PIKA</p>
+        </div>
+      </a>
+
+      <a href="https://www.gimp.org" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/gimp.png" alt="Icon 7">
+          <p>GIMP</p>
+        </div>
+      </a>
+
+      <a href="https://www.blackmagicdesign.com/products/davinciresolve" target="_blank" class="icon-link">
+        <div class="icon-box">
+          <img src="logos/dav.png" alt="Icon 8">
+          <p>DAVINCI RESOLVE</p>
+        </div>
+      </a>
     </div>
-  </a>
-  </div>
-</section>
+  </section>
 
   <footer>
-    <p>&copy; 2025 CV_Studio. All rights reserved.</p>
+    <p>&copy; 2026 CV_Studio. All rights reserved.</p>
   </footer>
-<script src = "header.js"></script>
+  <script src="header.js"></script>
 </body>
+
 </html>
