--- a/myprojects.html
+++ b/myprojects.html
@@ -1,69 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="myprojects.css">
-    <title>CV_Studio Official Site: Portofolio</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+   <link rel="stylesheet" href="myprojects.css">
+   <title>CV_Studio Official Site: Portofolio</title>
 </head>
+
 <body>
-    <header class="site-header">
-  <a href="#" class="logo glitch" data-text="CV_STUDIO">CV_STUDIO</a>
+   <header class="site-header">
+      <a href="#" class="logo glitch" data-text="CV_STUDIO">CV_STUDIO</a>
 
-  <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
-    <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-  </button>
+      <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+         <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+      </button>
 
-  <nav id="nav-menu" class="nav-menu" aria-hidden="true">
-    <a href="index.html" class="glitch-hover" data-text="Home">Home</a>
-    <a href="myprojects.html" class="active glitch" data-text="My Projects">My Projects</a>
-    <a href="aboutme.html" class="glitch-hover" data-text="About Me">About Me</a>
-    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=cvstudiogr@gmail.com" class="glitch-hover" data-text="Contact">Contact</a>
-  </nav>
-</header>
+      <nav id="nav-menu" class="nav-menu" aria-hidden="true">
+         <a href="index.html" class="glitch-hover" data-text="Home">Home</a>
+         <a href="myprojects.html" class="active glitch" data-text="My Projects">My Projects</a>
+         <a href="aboutme.html" class="glitch-hover" data-text="About Me">About Me</a>
+         <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=cvstudiogr@gmail.com" class="glitch-hover"
+            data-text="Contact">Contact</a>
+      </nav>
+   </header>
 
-<header class="TITLE">
-   <h2 class="glitch" data-text="PROJECTS">PROJECTS</h2>
-</header>
+   <header class="TITLE">
+      <h2 class="glitch" data-text="PROJECTS">PROJECTS</h2>
+   </header>
 
-      <section class ="section projects">
-        <div class="work-gallery">
-            <div class="work-gallery">
-               <div class="work-item">
+   <section class="section projects">
+      <div class="work-gallery">
+         <div class="work-gallery">
+            <div class="work-item">
                <a href="code_name.html">
-                 <img src="GAME_ICON.png" alt="Video Game">
+                  <img src="GAME_ICON.png" alt="Video Game">
                </a>
                <h3 class="glitch">AI TOOLS IN GAME DEVELOPMENT THESES</h3>
             </div>
             <div class="work-item item2">
-            <a href="https://youtu.be/XDPHwlj38qI">
-               <img src="FT13th/FT13TH_Animation.png">
-            </a>
-               <h3 class="glitch">2D Short Animated film</h3>
+               <a href="https://chrisvrellis.itch.io/jazz-21">
+                  <img src="jazz_21_icon.png">
+               </a>
+               <h3 class="glitch">CARD MINI GAME WITH NOIR STYLE AND JAZZ</h3>
             </div>
             <div class="work-item item3">
-                <a href="Custom_Tshirts/tshir.html">
-               <img src="Custom_Tshirts/customdesign.png">
+               <a href="https://youtu.be/XDPHwlj38qI">
+                  <img src="FT13th/FT13TH_Animation.png">
                </a>
-               <h3 class="glitch">CUSTOM CLOTHING DESIGNS</h3>
+               <h3 class="glitch">2D Short Animated film</h3>
             </div>
             <div class="work-item item4">
-                <a href="Skate_park3d/skate.html">
-               <img src="SkatePark_Icon.png">
+               <a href="Skate_park3d/skate.html">
+                  <img src="SkatePark_Icon.png">
                </a>
                <h3 class="glitch">3D SKATEPARK MAQUETTE</h3>
             </div>
             <div class="work-item item5">
-                <a href="topdowngame/cqb.html">
-               <img src="topdowngame/topdown_icon.png">
+               <a href="topdowngame/cqb.html">
+                  <img src="topdowngame/topdown_icon.png">
                </a>
                <h3 class="glitch">2D TOP DOWN SHOOTER [PROTOTYPE]</h3>
             </div>
-            <div class="work-item">
-               <img src="WINP.png">
-               <h3 class="glitch">WEBSITE IS UNDER CONSTRUCTION</h3>
+            <div class="work-item item3">
+               <a href="Custom_Tshirts/tshir.html">
+                  <img src="Custom_Tshirts/customdesign.png">
+               </a>
+               <h3 class="glitch">CUSTOM CLOTHING DESIGNS</h3>
             </div>
             <div class="work-item">
                <img src="WINP.png">
@@ -101,14 +105,15 @@
                <img src="WINP.png">
                <h3 class="glitch">WEBSITE IS UNDER CONSTRUCTION</h3>
             </div>
-          
-        </div>
-      </section>
 
-    <footer>
-        <p>&copy; 2025 CV_Studio. All rights reserved.</p>
-    </footer>
-    <script src = "typewriter.js"></script>
-    <script src = "header.js"></script>
+         </div>
+   </section>
+
+   <footer>
+      <p>&copy; 2025 CV_Studio. All rights reserved.</p>
+   </footer>
+   <script src="typewriter.js"></script>
+   <script src="header.js"></script>
 </body>
-</html> 
+
+</html>
